# petstory-mvp

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  index.html  privacy.html  robots.txt  script.js  sitemap.xml  styles.css  telemetry.js  terms.html
api/: .env.example  .gitignore  asaas.py  gemini.py  mail.py  main.py  pdf.py  process.py  pyproject.toml  store.py  telemetry.py  teste_image.py
api/fonts/: README.md
